--- a/MangoHud/wine-MidairCE-Win64-Test.conf
+++ b/MangoHud/wine-MidairCE-Win64-Test.conf
@@ -1,8 +1,15 @@
 vulkan_driver=0
+legacy_layout=0
 
 fps=1
+fps_only=1
+frametime=0
+frame_timing=0
+fps_limit=999
 vsync=1
 histogram=0
+
+engine_version=0
 
 gpu_stats=0
 
@@ -20,11 +27,11 @@ core_load=0
 
 ram=0
 
-position=bottom-left
-offset_x=370
-offset_y=-9
+position=bottom-right
+offset_x=415
+offset_y=7
 
-font_size=20
+font_size=42
 
 alpha=1
 background_alpha=0
@@ -33,5 +40,5 @@ engine_color=E0E0E0
 text_color=E0E0E0
 frametime_color=E0E0E0
 
-toggle_hud=F9
-reload_cfg=F12
+toggle_hud=End
+reload_cfg=Home
