--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,9 +1,8 @@
 backend = "glx";
-refresh-rate = 144;
 vsync = false;
 
 # shadow
-shadow = true;
+shadow = false;
 shadow-radius = 10;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -23,7 +22,16 @@ fade-in-step = 0.15;
 fade-out-step = 0.15;
 
 # transparency
-# ??
+active-opacity = 1;
+inactive-opacity = 0.92;
+frame-opacity = 1;
+popup-opacity = 1
+dropdown_menu-opacity = 1
+
+opacity-rule = [
+    "98:class_g = 'Alacritty' && focused",
+    "98:class_g = 'Alacritty' && !focused"
+];
 
 # corners
 round-borders = 0;
@@ -39,12 +47,10 @@ rounded-corners-exclude = [
     "class_g = 'dropdown_menu'",
 ];
 
+detect-rounded-corners = true;
+
 # dim
-inactive-dim = 0.05;
-# active-opacity = 0.95;
-# inactive-opacity = 0.95;
-# frame-opacity = 0.95;
-# menu-opacity = 1.0
+inactive-dim = 0;
 
 # wintypes
 wintypes:
