--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -18,9 +18,9 @@ Ctrl+q quit-watch-later
 BS show-text "${track-list}"
 
 b cycle interpolation
-n cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell"
+n cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell" "gaussian" "bicubic"
 A cycle-values video-aspect "16:9" "4:3" "5:4" "-1"
-h cycle-values hwdec "no" "vaapi"
+h cycle-values hwdec "vaapi" "no"
 
 MBTN_LEFT     ignore
 MBTN_LEFT_DBL ignore
