--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,39 +1,41 @@
 # vim: syntax=config
 
 # behaviour
-volume=40
 loop-playlist
 use-filedir-conf
 force-seekable=yes
-cursor-autohide=1000
+cursor-autohide=500
 prefetch-playlist=yes
 save-position-on-quit=no
 
 # audio
-volume=50
+volume=34
+# ao=pipewire
 
 # video
-hwdec=no
+hwdec=vaapi
+# vavpp=motion-adaptive
 profile=gpu-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 
 # better hdr
-hdr-compute-peak=yes
-tone-mapping=bt.2390
-tone-mapping-desaturate=1
-tone-mapping-desaturate-exponent=1.5
+hdr-compute-peak=no
+tone-mapping-mode=hybrid
 
 # interpolation
 video-sync=display-resample
-interpolation
+interpolation=yes
 tscale=mitchell
 blend-subtitles=yes
 
+# youtube
+script-opts=ytdl_hook-ytdl_path=/bin/yt-dlp
+
 # geometry
 screen=0
-autofit-smaller=10%
-autofit-larger=50%
+autofit-smaller=20%
+autofit-larger=1920x1080
 
 # osd
 osc=no
@@ -78,6 +80,7 @@ no-audio-display
 
 [video]
 input-ipc-server=/tmp/vidsocket
+profile=low-latency
 
 [image]
 profile=nodir
