--- a/pipewire/pipewire.conf
+++ b/pipewire/pipewire.conf
@@ -17,7 +17,7 @@ context.properties = {
     core.name                              = pipewire-0               # core name and socket name
 
     ## Properties for the DSP configuration.
-    default.clock.rate        = 96000
+    default.clock.rate        = 48000
     # default.clock.quantum     = 128
     # default.clock.min-quantum = 128
     # default.clock.max-quantum = 1024
@@ -140,26 +140,11 @@ context.modules = [
 
     # Provides factories to make session manager objects.
     {   name = libpipewire-module-session-manager }
+
+    plugin = actual/path/of/plugin/librnnoise_ladspa.so
 ]
 
 context.objects = [
-    #{   factory = <factory-name>
-    #    [ args  = { <key> = <value> ... } ]
-    #    [ flags = [ [ nofail ] ]
-    #}
-    #
-    # Creates an object from a PipeWire factory with the given parameters.
-    # If nofail is given, errors are ignored (and no object is created).
-    #
-    #{ factory = spa-node-factory args = { factory.name = videotestsrc node.name = videotestsrc Spa:Pod:Object:Param:Props:patternType = 1 } }
-    #{ factory = spa-device-factory args = { factory.name = api.jack.device foo=bar } flags = [ nofail ] }
-    #{ factory = spa-device-factory args = { factory.name = api.alsa.enum.udev } }
-    #{ factory = spa-device-factory args = { factory.name = api.alsa.seq.bridge node.name = Internal-MIDI-Bridge } }
-    #{ factory = adapter            args = { factory.name = audiotestsrc node.name = my-test } }
-    #{ factory = spa-node-factory   args = { factory.name = api.vulkan.compute.source node.name = my-compute-source } }
-
-    # A default dummy driver. This handles nodes marked with the "node.always-driver"
-    # property when no other driver is currently active. JACK clients need this.
     {   factory = spa-node-factory
         args = {
             factory.name    = support.node.driver
@@ -168,6 +153,7 @@ context.objects = [
             priority.driver = 20000
         }
     }
+
     {   factory = spa-node-factory
         args = {
             factory.name    = support.node.driver
@@ -177,57 +163,51 @@ context.objects = [
             node.freewheel  = true
         }
     }
-    # This creates a new Source node. It will have input ports
-    # that you can link, to provide audio for this source.
-    {   factory = adapter
-        args = {
-            factory.name     = support.null-audio-sink
-            node.name        = "Game"
-            node.description = "Game"
-            media.class      = "Audio/Sink"
-            audio.position   = "FL,FR"
-        }
-    }
 
-    {   factory = adapter
-        args = {
-            factory.name     = support.null-audio-sink
-            node.name        = "Media"
-            node.description = "Media"
-            media.class      = "Audio/Sink"
-            audio.position   = "FL,FR"
-        }
-    }
+    # {   factory = adapter
+    #     args = {
+    #         factory.name     = support.null-audio-sink
+    #         node.name        = "Game"
+    #         node.description = "Game"
+    #         media.class      = "Audio/Sink"
+    #         audio.position   = "FL,FR"
+    #         adapter.auto-port-config = {
+    #             mode = dsp
+    #             monitor = true
+    #             position = preserve
+    #         }
+    #     }
+    # }
 
-    {   factory = adapter
-        args = {
-            factory.name     = support.null-audio-sink
-            node.name        = "Discord"
-            node.description = "Discord"
-            media.class      = "Audio/Sink"
-            audio.position   = "FL,FR"
-        }
-    }
-    # This creates a single PCM source device for the given
-    # alsa device path hw:0. You can change source to sink
-    # to make a sink in the same way.
-    #{   factory = adapter
-    #    args = {
-    #        factory.name            = api.alsa.pcm.source
-    #        node.name               = "alsa-source"
-    #        node.description        = "PCM Source"
-    #        media.class             = "Audio/Source"
-    #        api.alsa.path           = "hw:0"
-    #        #api.alsa.period-size   = 1024
-    #        #api.alsa.headroom      = 0
-    #        #api.alsa.disable-mmap  = false
-    #        #api.alsa.disable-batch = false
-    #        #audio.format           = "S16LE"
-    #        #audio.rate             = 48000
-    #        #audio.channels         = 2
-    #        #audio.position         = "FL,FR"
-    #    }
-    #}
+    # {   factory = adapter
+    #     args = {
+    #         factory.name     = support.null-audio-sink
+    #         node.name        = "Media"
+    #         node.description = "Media"
+    #         media.class      = "Audio/Sink"
+    #         audio.position   = "FL,FR"
+    #         adapter.auto-port-config = {
+    #             mode = dsp
+    #             monitor = true
+    #             position = preserve
+    #         }
+    #     }
+    # }
+
+    # {   factory = adapter
+    #     args = {
+    #         factory.name     = support.null-audio-sink
+    #         node.name        = "Discord"
+    #         node.description = "Discord"
+    #         media.class      = "Audio/Sink"
+    #         audio.position   = "FL,FR"
+    #         adapter.auto-port-config = {
+    #             mode = dsp
+    #             monitor = true
+    #             position = preserve
+    #         }
+    #     }
+    # }
 ]
 
 context.exec = [
