--- a/MangoHud/wine-ArenaVR-Win64-Shipping.conf
+++ b/MangoHud/wine-ArenaVR-Win64-Shipping.conf
@@ -1,9 +1,14 @@
 vulkan_driver=0
 
 fps=1
-fps_limit=160
+fps_only=0
+frametime=1
+frame_timing=0
+fps_limit=260
 vsync=1
 histogram=0
+
+engine_version=0
 
 gpu_stats=0
 
@@ -21,18 +26,18 @@ core_load=0
 
 ram=0
 
-position=bottom-right
-offset_x=0
-offset_y=0
+position=bottom-left
+offset_x=208
+offset_y=2
 
 font_size=20
 
 alpha=1
-background_alpha=0.25
+background_alpha=0
 gpu_color=E0E0E0
 engine_color=E0E0E0
 text_color=E0E0E0
 frametime_color=E0E0E0
 
-toggle_hud=F9
-reload_cfg=F12
+toggle_hud=End
+reload_cfg=Home
