--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -30,7 +30,9 @@ dropdown_menu-opacity = 1
 
 opacity-rule = [
     "98:class_g = 'Alacritty' && focused",
-    "98:class_g = 'Alacritty' && !focused"
+    "98:class_g = 'Alacritty' && !focused",
+    "100:class_g = 'looking-glass-client' && focused",
+    "100:class_g = 'looking-glass-client' && !focused"
 ];
 
 # corners
