--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -10,10 +10,10 @@ save-position-on-quit=no
 
 # audio
 volume=34
-# ao=pipewire
+ao=pipewire
 
 # video
-hwdec=vaapi
+hwdec=auto
 # vavpp=motion-adaptive
 profile=gpu-hq
 scale=ewa_lanczossharp
@@ -33,6 +33,7 @@ blend-subtitles=yes
 script-opts=ytdl_hook-ytdl_path=/bin/yt-dlp
 
 # geometry
+screen=0
 autofit-smaller=20%
 autofit-larger=1920x1080
 
@@ -60,7 +61,8 @@ slang=enm,en,eng       # automatically select these subtitles (decreasing priori
 alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing priority)
 
 # misc
-title="${?media-title:${media-title}}${!media-title:No file.}"
+title="mpv"
+# title="${?media-title:${media-title}}${!media-title:No file.}"
 screenshot-format=png
 screenshot-png-compression=0
 screenshot-directory="~/usr/img/mpv"
