--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -23,7 +23,7 @@ fade-out-step = 0.15;
 
 # transparency
 active-opacity = 1;
-inactive-opacity = 0.92;
+inactive-opacity = 0.99;
 frame-opacity = 1;
 popup-opacity = 1
 dropdown_menu-opacity = 1
@@ -31,6 +31,8 @@ dropdown_menu-opacity = 1
 opacity-rule = [
     "98:class_g = 'Alacritty' && focused",
     "98:class_g = 'Alacritty' && !focused",
+    "98:class_g = 'gl' && focused",
+    "98:class_g = 'gl' && !focused",
     "100:class_g = 'looking-glass-client' && focused",
     "100:class_g = 'looking-glass-client' && !focused"
 ];
