--- a/MangoHud/MangoHud.conf
+++ b/MangoHud/MangoHud.conf
@@ -1,12 +1,14 @@
 vulkan_driver=0
+legacy_layout=0
 
 fps=1
 fps_only=0
 frametime=1
 frame_timing=0
-fps_limit=260
-vsync=1
 histogram=0
+
+vsync=1
+fps_limit=500
 
 engine_version=0
 
@@ -26,18 +28,18 @@ core_load=0
 
 ram=0
 
-position=bottom-left
-offset_x=208
-offset_y=2
+position=bottom-right
+offset_x=-450
+offset_y=-10
 
-font_size=20
+font_size=32
 
-alpha=1
+alpha=0.85
 background_alpha=0
-gpu_color=E0E0E0
-engine_color=E0E0E0
-text_color=E0E0E0
-frametime_color=E0E0E0
+gpu_color=EFEFEF
+engine_color=EFEFEF
+text_color=EFEFEF
+frametime_color=EFEFEF
 
 toggle_hud=End
 reload_cfg=Home
