--- a/MangoHud/vkcube.conf
+++ b/MangoHud/vkcube.conf
@@ -1,11 +1,11 @@
 vulkan_driver=0
 legacy_layout=0
 
-fps=1
+fps=0
 fps_only=0
 frametime=1
-frame_timing=0
-histogram=0
+frame_timing=1
+histogram=1
 
 vsync=1
 fps_limit=500
@@ -29,18 +29,17 @@ core_load=0
 ram=0
 
 position=bottom-right
-offset_x=-450
-offset_y=-10
+offset_x=-400
+offset_y=0
 
 font_size=32
 
-alpha=0.85
+alpha=0.7
 background_alpha=0
-gpu_color=EFEFEF
-engine_color=EFEFEF
-text_color=EFEFEF
-text_outline=0
-frametime_color=EFEFEF
+gpu_color=E0E0E0
+engine_color=E0E0E0
+text_color=E0E0E0
+frametime_color=E0E0E0
 
 toggle_hud=End
 reload_cfg=Home
