--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,7 +41,7 @@ set -g status-style bg=default
 set -g status-fg white
 set -g status-position bottom
 set -g status-left ""
-set -g status-right "#[bg=,fg=white] #(battery)   #(dat)"
+set -g status-right "#[bg=,fg=white] #(battery)  #(hostnamectl hostname)  #(dat)"
 set -g status-right-length 80
 set -g window-status-bell-style bg=red,fg=white
 set -g window-status-format "#[bg=default,fg=white,noreverse] #I #W "
