--- a/etc/systemd-boot/loader.conf
+++ b/etc/systemd-boot/loader.conf
@@ -1,4 +1,5 @@
-default      tkg.conf
-timeout      0
-editor       yes
-console-mode max
+default         linux.conf
+timeout         3
+editor          yes
+console-mode    0
+auto-firmware   true
