--- a/MangoHud/wine-MidairCE-Win64-Test.conf
+++ b/MangoHud/wine-MidairCE-Win64-Test.conf
@@ -8,7 +8,7 @@ frame_timing=0
 histogram=0
 
 vsync=1
-fps_limit=500
+fps_limit=260
 
 engine_version=0
 
@@ -40,6 +40,8 @@ gpu_color=EFEFEF
 engine_color=EFEFEF
 text_color=EFEFEF
 text_outline=0
+text_outline_color=000000
+text_outline_thickness=0
 frametime_color=EFEFEF
 
 toggle_hud=End
