--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -9,25 +9,8 @@ prefetch-playlist=yes
 save-position-on-quit=no
 
 # audio
-volume=34
+volume=38
 ao=pulse
-
-# video
-hwdec=auto
-# vavpp=motion-adaptive
-profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-
-# better hdr
-hdr-compute-peak=no
-tone-mapping-mode=hybrid
-
-# interpolation
-video-sync=display-resample
-interpolation=yes
-tscale=mitchell
-blend-subtitles=yes
 
 # youtube
 script-opts=ytdl_hook-ytdl_path=/bin/yt-dlp
@@ -49,12 +32,12 @@ osd-status-msg='${filename} \n\n ${playback-time} / ${duration} ${?percent-pos:(
 
 # subs
 sub-font='Overpass'
-sub-font-size='20'
+sub-font-size='28'
 sub-color='#CCE7E7E7'
 sub-border-size=2
 sub-border-color='#DD171717'
 no-sub-visibility # no subs on launch
-sub-auto=fuzzy    # external subs don't have to match the file name exactly to autoload
+sub-auto=all    # external subs don't have to match the file name exactly to autoload
 
 # langs
 slang=enm,en,eng       # automatically select these subtitles (decreasing priority)
@@ -81,7 +64,39 @@ no-audio-display
 
 [video]
 input-ipc-server=/tmp/vidsocket
-profile=low-latency
+interpolation=yes
+vd-lavc-threads=32
+vo=gpu-next
+gpu-api=vulkan
+hwdec=vaapi
+# cache-pause=no
+# video-latency-hacks=yes
+# stream-buffer-size=4k
+# profile=gpu-hq
+# scale=ewa_lanczos
+# scale-blur=0.981251
+
+# av1 speed up
+vd-queue-enable=yes
+ad-queue-enable=yes
+vd-queue-max-bytes=8000MiB
+vd-queue-max-samples=600000
+vd-queue-max-secs=15
+cache=yes
+demuxer-max-bytes=6500M
+demuxer-max-back-bytes=10000M
+vd-lavc-film-grain=auto # alt: cpu / gpu
+vd-lavc-threads=0
+ad-lavc-threads=0
+
+# better hdr
+hdr-compute-peak=yes
+tone-mapping=auto
+
+# interpolation
+video-sync=display-resample
+interpolation=yes
+tscale=mitchell
 
 [image]
 profile=nodir
