--- a/MangoHud/MangoHud.conf
+++ b/MangoHud/MangoHud.conf
@@ -39,6 +39,9 @@ background_alpha=0
 gpu_color=EFEFEF
 engine_color=EFEFEF
 text_color=EFEFEF
+text_outline=1
+text_outline_color=111111
+text_outline_thickness=1
 frametime_color=EFEFEF
 
 toggle_hud=End
